Add annotations for users handler
